Adding playlist search for music

REVIEW:107926
BUG: 311517